--- a/Tutoriel.html
+++ b/Tutoriel.html
@@ -27,17 +27,17 @@
       <div class="col-md-1">
 
         <span class="icon"><a href="">
-            <button><i class="fa-brands fa-facebook fa-2xl" style="color: rgb(126, 120, 120);"></i></button>
+            <button><i class="fa-brands fa-facebook fa-xl" style="color: rgb(126, 120, 120);"></i></button>
           </a></span>
         <span class="icon"> <a href="">
-            <button><i class="fa-brands fa-twitter fa-2xl" style="color: rgb(126, 120, 120);"></i></button>
+            <button><i class="fa-brands fa-twitter fa-xl" style="color: rgb(126, 120, 120);"></i></button>
           </a></span>
         <span class="icon"><a href="">
-            <button><i class="fa-brands fa-instagram fa-2xl" style="color:  rgb(126, 120, 120);"></i></button>
+            <button><i class="fa-brands fa-instagram fa-xl" style="color:  rgb(126, 120, 120);"></i></button>
           </a></span>
 
         <span class="icon"><a href="">
-            <button><i class="fa-brands fa-tiktok fa-2xl" style="color: rgb(126, 120, 120);"></i></button>
+            <button><i class="fa-brands fa-tiktok fa-xl" style="color: rgb(126, 120, 120);"></i></button>
           </a></span>
 
 
@@ -51,9 +51,7 @@
             Acceuil
           </a>
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="Laine.html">Laine</a>
-            </li>
+
             <li class="nav-item">
               <a class="nav-link" href="Mercerie.html">Mercerie</a>
             </li>
@@ -66,17 +64,19 @@
 
           </ul>
           <div class="cart">
-            <a href="">
+            <a href="panier.html">
               <i class="fa-brands fa-shopify fa-2xl"></i>
             </a>
           </div>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" id="searchInput" placeholder="Recherche"
               aria-label="Search" />
-            <button class="btn btn-outline-dark" type="submit" id="search-button">
+            <button class="btn btn-outline-dark" type="submit" id="searchButton">
               <i class="fa-solid fa-magnifying-glass fa-xl"></i>
             </button>
-            <div id="search-results"></div>
+            <div id="searchResults">
+              <!-- Les résultats de la recherche seront affichés ici -->
+            </div>
 
 
           </form>
@@ -367,8 +367,9 @@
           </div>
         </div>
       </div>
-      <!-- INFOS -->
-      <div>
+      <section>
+        <!-- INFOS -->
+
         <div>
           <h3 class="end-main">
             <hr color="black" size="4" width="100%" />
@@ -397,9 +398,11 @@
             <p>à partir de 1000Fcfa</p>
           </div>
         </div>
-      </div>
+      </section>
     </div>
   </main>
+
+  <!-- Pied de page  -->
   <footer>
     <div>
       <div>
@@ -494,6 +497,8 @@
               </a>
 
               <hr color="black" size="3" width="60%" />
+
+              <span><a href="contaxt.html" class="btn btn-outline-dark">Contactez nous</a></span>
             </div>
           </div>
 
